adding home templates and index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base html file, in <project_name> templates, to be used for index html file in home/templates/home folder -->
 {% load static %}
 
 <!doctype html>
