added static folder and navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-succes">Motigym homepage!</h1>
+    <h1 class="display-4 text-succes mt-5 pt-5">Motigym homepage <br> work in progress!</h1>
 {% endblock%}
