--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -3,5 +3,37 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-succes mt-5 pt-5">Motigym memberships <br> {{memberships}}</h1>
-{% endblock%}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Memberships</h2>
+                <hr class="w-75 mx-auto mb-1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-10 offset-1">
+                
+                <div class="row">
+                    {% for membership in memberships %}
+                        <div class="col-sm-12 col-md-6 col-lg-4 pb-4">
+                            <div class="card h-100 border-0 mt-2">
+                                <div class="card-body pb-0">
+                                    <h2 class="mb-0 text-center">{{ membership.name }}</h2>
+                                    <hr>
+                                    <p class="">{{ membership.description }}</p>
+                                </div>
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 font-weight-bold">${{ membership.price }}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %} 
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
