--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,26 @@
+html {
+    height: 100%;
+}
+
 body{
     background: url('/media/gym-bg.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+}
+
+.main-section{
+    margin-top: 56px;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: -1;
+}
+
+.logo-font{
+    color: white;
 }
