resolved overlay z index problem

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,5 +3,11 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-succes mt-5 pt-5">Motigym homepage <br> work in progress!</h1>
-{% endblock%}
+    <div class="container-fluid text-center">
+        <h1 class="display-4 mt-5 pt-5">Motigym homepage <br> work in progress!</h1>
+
+        <div class="row">
+            <p>Choose your membership here</p>
+        </div>
+    </div>
+{% endblock %}
