--- a/templates/base.html
+++ b/templates/base.html
@@ -93,20 +93,20 @@
     </header>
 
     <section class="main-section">
+        <div class="overlay"></div>
+            {% if messages %}
+                <div class="message-container"></div>
+            {% endif %}
 
-        {% if messages %}
-            <div class="message-container"></div>
-        {% endif %}
+            {% block page_header %}
+            {% endblock %}
 
-        {% block page_header %}
-        {% endblock %}
+            {% block content %}
+            {% endblock %}
 
-        {% block content %}
-        {% endblock %}
-
-        {% block postloadjs %}
-        {% endblock %}
-
+            {% block postloadjs %}
+            {% endblock %}
+        </div> 
     </section>
 
 </body>
