added font styles and fixed css

--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -10,7 +10,7 @@
                 <hr class="w-75 mx-auto mb-1">
             </div>
         </div>
-        <div class="row">
+        <div class="row memberships">
             <div class="col-10 offset-1">
                 
                 <div class="row">
