--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
         <h1 class="display-4 mt-5 pt-5">Motigym homepage <br> work in progress!</h1>
 
         <div class="row">
-            <p>Choose your membership here</p>
+            <p>Choose your membership plan here</p>
         </div>
     </div>
 {% endblock %}
