--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 html {
     height: 100%;
 }
@@ -6,12 +8,20 @@ body{
     background: url('/media/gym-bg.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
-    font-family: 'Lato';
+    color: rgb(255, 255, 255);
+}
+
+.navbar{
+    font-family: 'Bebas Neue', cursive;
+    text-transform: uppercase;
 }
 
 .main-section{
     margin-top: 56px;
+}
+
+.memberships{
+    color: black;
 }
 
 .overlay{
