--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,5 +9,21 @@
         <div class="row">
             <p>Choose your membership plan here</p>
         </div>
+
+
+    <div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-black">
+                Discover our new memberships!
+            </h1>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="btn btn-ls rounded-0 text-uppercase py-3">Start now</a>
+                </h4>
+            </div>
+        </div>    
     </div>
+    </div>
+
 {% endblock %}
