--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,12 +3,12 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid text-center">
+<!--     <div class="container-fluid text-center">
         <h1 class="display-4 mt-5 pt-5">Motigym homepage <br> work in progress!</h1>
 
         <div class="row">
             <p>Choose your membership plan here</p>
-        </div>
+        </div> -->
 
 
     <div class="container h-100">
