added css to memberhips page

--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -4,10 +4,11 @@
 
 {% block content %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="row m-cards">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Memberships</h2>
+                <h2 class="logo-font">Membership Plans</h2>
                 <hr class="w-75 mx-auto mb-1">
+                <h5 class="">Choose the membership plan that best suits your needs:</h5>
             </div>
         </div>
         <div class="row memberships">
@@ -15,7 +16,7 @@
                 
                 <div class="row">
                     {% for membership in memberships %}
-                        <div class="col-sm-12 col-md-6 col-lg-4 pb-4">
+                        <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
                             <div class="card h-100 border-0 mt-2">
                                 <div class="card-body pb-0">
                                     <h2 class="mb-0 text-center">{{ membership.name }}</h2>
@@ -25,7 +26,7 @@
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 font-weight-bold">${{ membership.price }}</p>
+                                            <p class="lead price mb-0 font-weight-bold">${{ membership.price }}</p>
                                         </div>
                                     </div>
                                 </div>
