--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -17,20 +17,22 @@
                 <div class="row">
                     {% for membership in memberships %}
                         <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
-                            <div class="card h-100 border-0 mt-2">
-                                <div class="card-body pb-0">
-                                    <h2 class="mb-0 text-center">{{ membership.name }}</h2>
-                                    <hr>
-                                    <p class="">{{ membership.description }}</p>
-                                </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
-                                    <div class="row">
-                                        <div class="col">
-                                            <p class="lead price mb-0 font-weight-bold">${{ membership.price }}</p>
+                            <a href="{% url 'membership_detail' membership.id %}" class="text-reset text-decoration-none">
+                                <div class="card h-100 border-0 mt-2">
+                                    <div class="card-body pb-0">
+                                        <h2 class="mb-0 text-center">{{ membership.name }}</h2>
+                                        <hr>
+                                        <p class="">{{ membership.description }}</p>
+                                    </div>
+                                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                                        <div class="row">
+                                            <div class="col">
+                                                <p class="lead price mb-0 font-weight-bold">€{{ membership.price }}</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>    
                         </div>
                     {% endfor %} 
                 </div>
