added more components to the detail cards

--- a/memberships/templates/memberships/membership_detail.html
+++ b/memberships/templates/memberships/membership_detail.html
@@ -22,26 +22,28 @@
             </div>
         </div>
         <div class="row memberships">
-            <div class="col-10 offset-1">
+            <div class="col-10 offset-1 mb-4">
                 <div class="card bg-dark">
                     <div class="row card-body">
                         
-                        <img class="col-sm-12 col-md-5 " src="Images/template.png" alt="sans"/>
+                        <div class="col-sm-12 col-md-5 card-bg-detail">
+                        </div>
 
-                            <div class="col-sm-12 col-md-7">
-                                <div class="card">
+                        <div class="col-sm-12 col-md-7 card-m-detail">
+                            <div class="card">
 
-                                    <div class="card-header">
-                                        €{{ membership.price }}/mo
-                                    </div>
-                                    
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ membership.name }}</h5>
-                                        <p class="card-text">{{ membership.description }}</p>
-                                        <a href="#" class="btn btn-primary">Subscribe now</a>
-                                    </div>
+                                <div class="card-header detail-price">
+                                    €{{ membership.price }}/mo
                                 </div>
-                             </div>   
+                                
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ membership.name }}</h5>
+                                    <p class="card-text">{{ membership.description }}</p>
+                                    <a href="{% url 'memberships' %}" class="btn btn-secondary">Go Back</a>
+                                    <a href="#" class="btn btn-primary">Subscribe now</a>
+                                </div>
+                            </div>
+                        </div>   
                     </div>
                 </div>
 
