rearranging membership detail card and css

--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -3,40 +3,45 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row m-cards">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font">Membership Plans</h2>
-                <hr class="w-75 mx-auto mb-1">
-                <h5 class="">Choose the membership plan that best suits your needs:</h5>
-            </div>
+<div class="container-fluid">
+    <div class="row m-cards">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Membership Plans</h2>
+            <hr class="w-75 mx-auto mb-1">
+            <h5 class="">Choose the membership plan that best suits your needs:</h5>
         </div>
-        <div class="row memberships">
-            <div class="col-10 offset-1">
-                
-                <div class="row">
-                    {% for membership in memberships %}
-                        <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
-                            <a href="{% url 'membership_detail' membership.id %}" class="text-reset text-decoration-none">
-                                <div class="card h-100 border-0 mt-2">
-                                    <div class="card-body pb-0">
-                                        <h2 class="mb-0 text-center">{{ membership.name }}</h2>
-                                        <hr>
-                                        <p class="">{{ membership.description }}</p>
-                                    </div>
-                                    <div class="card-footer bg-white pt-0 border-0 text-left">
-                                        <div class="row">
-                                            <div class="col">
-                                                <p class="lead price mb-0 font-weight-bold">€{{ membership.price }}</p>
+    </div>
+    <div class="row memberships">
+        <div class="col-10 offset-1 mb-4">
+            <div class="card bg-dark">
+                <div class="row memberships">
+                    <div class="col-10 offset-1">
+                        <div class="row">
+                            {% for membership in memberships %}
+                                <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
+                                    <a href="{% url 'membership_detail' membership.id %}" class="text-reset text-decoration-none">
+                                        <div class="card h-100 border-0 mt-2">
+                                            <div class="card-body pb-0">
+                                                <h2 class="mb-0 text-center">{{ membership.name }}</h2>
+                                                <hr>
+                                                <p class="">{{ membership.description }}</p>
+                                            </div>
+                                            <div class="card-footer bg-white pt-0 border-0 text-left">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <p class="lead price mb-0 font-weight-bold">€{{ membership.price }}</p>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </a>    
                                 </div>
-                            </a>    
+                            {% endfor %} 
                         </div>
-                    {% endfor %} 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
