--- a/static/css/base.css
+++ b/static/css/base.css
@@ -46,19 +46,10 @@ body{
 
 /* membership detail page */
 
-.card-bg-detail{
-    background: url(/media/fit-couple.jpg) no-repeat;
-    background-size: cover;
+.main-detail-card{
+    background-color: #030305;
 }
 
-.card-m-detail{
-    max-width: 100%;
-    height: auto;
-}
-
-.detail-price{
-    font-size: 1.25rem;
-}
 
 /* media responsiveness */
 
@@ -83,14 +74,6 @@ body{
 
 }
 
-@media only screen and (min-width: 769px){
- .card-m-detail{
-    padding-left: 0px;
-    padding-right: 0px;
- }
-
- .card-bg-detail{
-    padding-left: 12px;
- }
+@media only screen and (min-width: 768px){
 
 }
