added search functionality and updated views.py

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,10 +10,14 @@ body{
     color: rgb(255, 255, 255);
 }
 
+/* navbar */
+
 .navbar{
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
 }
+
+/* main section */
 
 .main-section{
     margin-top: 56px;
