--- a/templates/base.html
+++ b/templates/base.html
@@ -73,9 +73,8 @@
                     {% endif %}
                     </ul>
 
-                    <form class="d-flex"method="GET" action="{% url 'home' %}">
-                        {% csrf_token %}
-                        <input class="form-control me-2" name="q" type="text" placeholder="Search" aria-label="Search">
+                    <form class="d-flex"method="GET" action="{% url 'memberships' %}">
+                        <input class="form-control me-2 search-text" name="q" type="text" placeholder="Try Trial, Regular, Roaming.." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
 
