fixed search bar css and placeholder text

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                     </ul>
 
                     <form class="d-flex"method="GET" action="{% url 'memberships' %}">
-                        <input class="form-control me-2 search-text" name="q" type="text" placeholder="Try Trial, Regular, Roaming.." aria-label="Search">
+                        <input class="form-control me-2 search-box" name="q" type="text" placeholder="Try Trial, Regular, Roaming.." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
 
