--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,10 +12,6 @@ body{
 
 /* navbar */
 
-.navbar{
-    font-family: 'Bebas Neue', cursive;
-    text-transform: uppercase;
-}
 
 /* main section */
 
@@ -83,6 +79,14 @@ body{
 
  .m-cards{
     padding-top: 70px;
+ }
+
+}
+
+@media only screen and (min-width: 992px) {
+    
+ .search-box{
+    width: 250px;
  }
 
 }
