--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -29,7 +29,7 @@
     <!-- membership cards -->
     <div class="row memberships">
         <div class="col-10 offset-1 mb-4">
-            <div class="card bg-dark px-0">
+            <div class="px-0">
                 <div class="row cards-margin">
                 {% for membership in memberships %}
                     <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
