added bag html file and css

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                     </form>
 
                     <div class="nav-item cart">
-                        <a class="nav-link" href="{% url 'home' %}">
+                        <a class="nav-link" href="{% url 'view_bag' %}">
                             <i class="fas fa-shopping-cart lg-font"></i>
                             
                             <span class="cart-icon-quantity"></span>
