--- a/memberships/templates/memberships/memberships.html
+++ b/memberships/templates/memberships/memberships.html
@@ -1,4 +1,3 @@
-<!-- base index html, insert content here -->
 {% extends "base.html" %}
 {% load static %}
 
@@ -32,7 +31,7 @@
             <div class="px-0">
                 <div class="row cards-margin">
                 {% for membership in memberships %}
-                    <div class="col-sm-12 m-card col-md-6 col-lg-4 pb-4">
+                    <div class="col-sm-12 m-card md-expansion shadow col-md-6 col-lg-4 pb-4">
                         <a href="{% url 'membership_detail' membership.id %}" class="text-reset text-decoration-none">
                             <div class="card h-100 border-0 mt-2">
                                 <div class="card-body pb-0">
