--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,11 @@ body{
     margin-right: -5px;
 }
 
+.md-expansion:hover {
+transform: scale(1.05);
+transition: 0.4s;
+}
+
 
 /* membership detail page */
 
